@@ -1,3 +1,8 @@
+2010-09-13 Dominique Dumont  <domi.dumont@free.fr> 1.207
+	* Added Debian's Dep-5 model
+	* Value.pm: Added validation of value based on a Parse::RecDescent grammar
+	* AnyId.pm: Authorized keys can also be based of a  Parse::RecDescent grammar
+
 2010-07-23  Dominique Dumont  <domi.dumont@free.fr> 1.206
 
 	First version to feature code written during Google Summer of Code 2010.
